2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Make the ResultTextView grab the focus when
    definitions are added.

2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Some code cleanup (kill_lookup_thread).

2007-08-19 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic.rb: Added a HAVE_CONSOLE constant. This constant must be
    used to check that the console is available because rubyw can't use stdout,
    stderr, stdin.
    * bin/pre-setup.rb: Don't require gettext here but in lib/fantasdic.rb
    instead.

2007-08-19 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/ipc.rb: Moved IPC::send and IPC::find to IPC::Instance
    module. It makes more sense to use this namespace.
    * lib/fantasdic/ui.rb: Applied the necessary modifications to follow above
    change.
    * lib/fantasdic/ui/main_app.rb: Likewise.

2007-08-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/ipc.rb: Added an IPC backend using win32 named pipes
    thanks to win32/pipe from the win32-utils package. Three backends are
    now available:

    - Named pipes. This uses win32/pipe from the win32-utils package. This
    approach is preferred on win32.
    - DRb (Distributed Ruby). This approach is portable but its main
    disadvantage is that it may be blocked by the local firewall.
    - X11. This works by creating an invisible window, setting a uniquely named
    atom on the root window which refers to the invisible window (so other
    instances can find the window) and watching for property change events
    on the invisible window. This approach is preferred on Unix.

2007-08-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui.rb: Renamed "win" variable to "instance". IPC now
    supported by window.
    * lib/fantasdic/ui/main_app.rb: IPC::Window renamed to IPC::Instance.
    * lib/fantasdic/ui/ipc.rb: Simple IPC mechanism using DRb (Distributed