@@ -85,6 +85,7 @@
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
                             <property name="xpad">10</property>
+                            <property name="label" translatable="yes">Matches</property>
                             <property name="use_underline">True</property>
                           </widget>
                         </child>
